swagger descriptions fix
