# backend/docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "Детальное описание",
+                "description": "Authenticates a user and returns a JWT",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,12 +16,46 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Описание",
+                "summary": "Log in a user",
+                "parameters": [
+                    {
+                        "description": "login body",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.User"
+                            "$ref": "#/definitions/controllers.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/me": {
+            "get": {
+                "description": "Retrieves the authenticated user's details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.APIResponse"
                         }
                     }
                 }
@@ -29,7 +63,7 @@
         },
         "/signup": {
             "post": {
-                "description": "Детальное описание",
+                "description": "Creates a new user account",
                 "consumes": [
                     "application/json"
                 ],
@@ -39,12 +73,23 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Описание",
+                "summary": "Sign up a new user",
+                "parameters": [
+                    {
+                        "description": "signup body",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.User"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controllers.User"
+                            "$ref": "#/definitions/controllers.APIResponse"
                         }
                     }
                 }
@@ -52,6 +97,15 @@
         }
     },
     "definitions": {
+        "controllers.APIResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "controllers.User": {
             "type": "object",
             "properties": {
